Fixed flicker issue in ios

--- a/app/assets/stylesheets/anniversary.css.scss
+++ b/app/assets/stylesheets/anniversary.css.scss
@@ -11,6 +11,10 @@
   margin-bottom: 20px;
   -webkit-perspective: 400px;
   perspective: 400px;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+
+
 
 
   .album-artwork {
